--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.4.2",
     "mysql2": "^1.6.5",
     "sequelize": "^5.9.2",
     "sequelize-cli": "^5.5.0"
   },
   "scripts": {
-    "start": "babel-node index.js",
+    "start": "nodemon index.js",
     "db-init": "node_modules/.bin/sequelize init:models; node_modules/.bin/sequelize init:config",
     "db-sync": "babel-node sync.js"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
