--- a/config/config.json
+++ b/config/config.json
@@ -4,20 +4,23 @@
     "password": "root",
     "database": "graph",
     "host": "0.0.0.0",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   },
   "test": {
     "username": "root",
     "password": "root",
     "database": "graph",
     "host": "0.0.0.0",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   },
   "production": {
     "username": "root",
     "password": "root",
     "database": "graph",
     "host": "0.0.0.0",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   }
 }
