Crypt the password and the error handler rewrite

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Sphinxs",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
