--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-  database-s: # Service
-    container_name: database-c # Container
+  database:
+    container_name: database
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
@@ -10,5 +10,5 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: music
+      MYSQL_DATABASE: graph
       MYSQL_PASSWORD: root
