--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
+    "generate-password": "^1.4.2",
     "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "sequelize": "^5.9.2",
     "sequelize-cli": "^5.5.0"
   },
