Name the Docker volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,15 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: graph
       MYSQL_PASSWORD: root
+    volumes:
+      - database-volume:/var/lib/mysql
+    # networks:
+      # - graph-network
+    
+volumes:
+  database-volume:
+    external: false
+
+# networks:
+  # graph-network:
+    # driver: bridge
