--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Sphinxs",
   "license": "Mozilla Public License 2.0",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -16,7 +15,8 @@
     "nodemailer": "^6.3.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "sequelize": "^5.9.2",
-    "sequelize-cli": "^5.5.0"
+    "sequelize-cli": "^5.5.0",
+    "sjcl": "https://github.com/bitwiseshiftleft/sjcl"
   },
   "scripts": {
     "start": "nodemon index.js",
