--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "main": "index.js",
   "author": "Sphinxs",
-  "license": "Mozilla Public License 2.0",
+  "license": "UNLICENSED",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
