--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "generate-password": "^1.4.2",
