--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,15 @@
 NODE_ENV="production"
 
 # JWT
-JWT_KEY="k&y",
+JWT_KEY="k&y"
 
-JWT_EXPIRATION="2d",
+JWT_EXPIRATION="2d"
 
-JWT_EXPIRATION_INT=48,
+JWT_EXPIRATION_INT=48
 
 # Email
-GMAIL_EMAIL="",
+GMAIL_EMAIL=""
 
-GMAIL_PASSWORD="",
+GMAIL_PASSWORD=""
 
-GMAIL_FROM="Name <email@email.com>"  
+GMAIL_FROM="Name <email@email.com>"
